# super-author

./: .gitignore  CLAUDE.md  DESIGN.md  biome.json  bug.md  index.html  optimization.md  package-lock.json  package.json  tailwind.config.js  task.md  todo.md  vite.config.ts
.claude/commands/: append-task.md
.claude/plans/: todo-md-3-9b-enchanted-meerkat-agent-a87bde43a0d54184d.md
.playwright-mcp/: page-2026-05-12T15-41-40-366Z.yml  page-2026-05-12T15-43-58-969Z.yml
docs/bugfix/: bug-07.md
docs/changes/: tool-call-collapsible-rendering.md
docs/context/: mimo-api.md  react-mentions-ts.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/test_dir/: renamed_file.txt
src/infrastructure/: BookRepository.ts  ChapterRepository.ts  ConfigService.ts  IFileService.ts  MockFileService.ts  TauriFileService.ts  builtinAgents.ts  builtinCommands.ts  createFileService.ts
tests/application/: AgentLoop.test.ts  ContextBuilder.test.ts  ConversationStore.test.ts  SubAgentTool.test.ts  SystemPrompt.test.ts  ToolRegistry.test.ts
tests/infrastructure/: BookRepository.test.ts  ChapterRepository.test.ts  ClaudeProvider.test.ts  MockFileService.test.ts  OpenAIProvider.test.ts  builtinAgents.test.ts  createProvider.test.ts  tools.test.ts
tests/layout/: Layout.test.tsx
tests/phase2/: Phase2.test.tsx
tests/phase3/: Phase3.test.tsx
tests/presentation/: AgentPanel.test.tsx  BookSelector.test.tsx  ChapterTree.test.tsx  ChatRow.test.tsx  (+2 more)
(+161 files in other folders)
