[package]
name = "super-author"
version = "0.1.0"
edition = "2021"

[lib]
name = "super_author_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-http = { version = "2", features = ["stream"] }
tauri-plugin-mcp-bridge = "0.11"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
